--- a/src/components/ThemeToggleBar/ThemeToggleBar.css
+++ b/src/components/ThemeToggleBar/ThemeToggleBar.css
@@ -1,36 +1,4 @@
-@keyframes dottedWhiteLineWidth {
-  0% {
-    width: 0px;
-  }
-  25%{
-    width: 200px;
-  }
-  50%{
-    width: 50px;
-  }
-  100%{
-    width: 114px;
-  }
-}
-
-@keyframes moveRightAndLeft {
-  0% {
-    transform: translateX(0%);
-  }
-  45% {
-    transform: translateX(-100%);
-  }
-  50% {
-    transform: translateX(50%);
-  }
-  100% {
-    transform: translateX(0%);
-  }
-}
-
-
 #theme-toggle {
-  /*border-bottom: 1px dotted white;*/
   position:relative;
 }
 
@@ -42,13 +10,6 @@
   top: 21px;
   z-index: -1;
   right: 0;
-
-  animation-name: dottedWhiteLineWidth;
-  animation-duration: 10s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: 2;
-  animation-direction: normal;
-  -webkit-animation-timing-function: ease-in-out;
 }
 
 .theme-toggle__label{
@@ -59,13 +20,6 @@
 #theme-toggle ul {
   list-style: none;
   display: inline-block;
-
-  animation-name: moveRightAndLeft;
-  animation-duration: 5s;
-  animation-timing-function: linear;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  -webkit-animation-timing-function: linear;
 }
 
 #theme-toggle ul li {
@@ -98,4 +52,95 @@
   background: #fff;
   transition: all .3s ease;
   margin-right: 4px;
+}
+
+@media(min-width: 768px) {
+  /* tablets and desktop */
+  @keyframes moveRightAndLeft {
+    0% {
+      transform: translateX(0%);
+    }
+    45% {
+      transform: translateX(-100%);
+    }
+    50% {
+      transform: translateX(50%);
+    }
+    100% {
+      transform: translateX(0%);
+    }
+  }
+  @keyframes dottedWhiteLineWidth {
+    0% {
+      width: 0px;
+    }
+    25%{
+      width: 200px;
+    }
+    50%{
+      width: 50px;
+    }
+    100%{
+      width: 114px;
+    }
+  }
+  #theme-toggle ul {
+    animation-name: moveRightAndLeft;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    -webkit-animation-timing-function: linear;
+  }
+  .dotted-white-line {
+    animation-name: dottedWhiteLineWidth;
+    animation-duration: 10s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 2;
+    animation-direction: normal;
+    -webkit-animation-timing-function: ease-in-out;
+  }
+}
+
+@media(max-width: 767px) {
+    /* phones */
+    .dotted-white-line{
+      display:none;
+    }
+    .theme-toggle__label{
+      vertical-align: super;
+    }
+    .theme-toggle__anchor--white{
+      height:20px;
+      width:20px;
+    }
+    .theme-toggle__anchor--black{
+      height:20px;
+      width:20px;
+      margin-left:16px;
+    }
+    #theme-toggle ul{
+      vertical-align: sub;
+    }
+}
+
+@media(max-width: 767px) and (orientation: portrait) {
+    /* portrait phones */
+    .dotted-white-line{
+      display:none;
+    }
+    .theme-toggle__label{
+      vertical-align: super;
+    }
+    .theme-toggle__anchor--white{
+      height:20px;
+      width:20px;
+    }
+    .theme-toggle__anchor--black{
+      height:20px;
+      width:20px;
+    }
+    #theme-toggle ul{
+      vertical-align: sub;
+    }
 }
