--- a/src/components/InformationOverlay/InformationOverlay.css
+++ b/src/components/InformationOverlay/InformationOverlay.css
@@ -97,9 +97,9 @@ h1{
 }
 
 .information-overlay-content-wrapper{
-  -webkit-transform: translateY(0vh);
-  -ms-transform: translateY(0vh);
-  transform: translateY(0vh);
+  -webkit-transform: translateY(20vh);
+  -ms-transform: translateY(20vh);
+  transform: translateY(20vh);
   text-align: center;
   width: 100%;
   height:100%;
@@ -176,6 +176,9 @@ h1{
   }
   .information-overlay-content-wrapper{
     width:unset;
+    -webkit-transform: translateY(20vh);
+    -ms-transform: translateY(20vh);
+    transform: translateY(20vh);
   }
 }
 
@@ -197,5 +200,7 @@ h1{
   }
   .information-overlay-content-wrapper{
     width:unset;
-  }
+    -webkit-transform: translateY(20vh);
+    -ms-transform: translateY(20vh);
+    transform: translateY(20vh);  }
 }
