--- a/src/components/ParallaxContainer/DetailParallaxContainer.css
+++ b/src/components/ParallaxContainer/DetailParallaxContainer.css
@@ -1,10 +1,3 @@
-/*.scrollable{
-  background-color: transparent;
-  overflow-y: scroll;
-  min-height: 100vh;
-  width: 90%;
-}*/
-
 .detail-background {
   overflow: hidden;
   will-change: transform;
@@ -14,6 +7,7 @@
   width: 100%;
   transition: all 0.8s cubic-bezier(0.22, 0.44, 0, 1);
 }
+
 .detail-background:before {
   content: "";
   position: absolute;
@@ -28,46 +22,31 @@
   background-position: bottom;
 }
 
-.detail-background-default{
-  background:linear-gradient(to bottom,rgba(0,0,0,0.1),rgba(0,0,0,0.9)),
-    url(../../images/nightsky.jpg);
-    background-size: cover;
+.detail-background-default {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url(../../images/nightsky.jpg);
+  background-size: cover;
 }
 
-.detail-background-hire{
-  background:linear-gradient(to right,rgba(0,0,30,0.8),rgba(0,0,0,0.2)),
-    url(../../images/coffee.jpg);
-    background-size: cover;
+.detail-background-hire {
+  background: linear-gradient(to right, rgba(0, 0, 30, 0.8), rgba(0, 0, 0, 0.2)), url(../../images/coffee.jpg);
+  background-size: cover;
 }
 
-.detail-background-tech{
+.detail-background-tech {
   background: #181818
 }
-
 
 .detail-background:first-child {
   transform: translateY(-15vh);
 }
-.detail-background-black{
-  color: white;
-}
-.detail-background-black:before {
-  transition: all 0.8s cubic-bezier(0.22, 0.44, 0, 1);
-  background-image: url(../../images/background-black.jpg);
-}
-.detail-background-white{
-  color: black;
-}
-.detail-background-white:before {
-  color: black;
-  transition: all 0.8s cubic-bezier(0.22, 0.44, 0, 1);
-  background-image: url(../../images/background-white.jpg);
-}
+
 .detail-background:first-child .content-wrapper {
   transform: translateY(15vh);
 }
 
+
 /* Set stacking context of slides */
+
 .detail-background:nth-child(1) {
   z-index: 3;
 }
@@ -93,10 +72,11 @@
   backface-visibility: hidden;
   transition: all 1.7s cubic-bezier(0.22, 0.44, 0, 1);
 }
-.content-wrapper-override{
+
+.content-wrapper-override {
   transform: translateY(0vh) !important;
-  /*height: unset; remove the 100vh setting */
 }
+
 .content-title {
   font-size: 12vh;
   line-height: 1.4;
@@ -105,34 +85,35 @@
 .detail-background.up-scroll {
   transform: translate3d(0, -15vh, 0);
 }
+
 .detail-background.up-scroll .content-wrapper {
   transform: translateY(15vh);
 }
-.detail-background.up-scroll + .background {
+
+.detail-background.up-scroll+.background {
   transform: translate3d(0, 30vh, 0);
 }
-.detail-background.up-scroll + .background .content-wrapper {
+
+.detail-background.up-scroll+.background .content-wrapper {
   transform: translateY(30vh);
 }
 
 .detail-background.down-scroll {
   transform: translate3d(0, -130vh, 0);
 }
-.detail-background.down-scroll .content-wrapper {
-  /*transform: translateY(40vh);*/
-}
-.detail-background.down-scroll + .background:not(.down-scroll) {
+
+.detail-background.down-scroll+.background:not(.down-scroll) {
   transform: translate3d(0, -15vh, 0);
 }
-.detail-background.down-scroll + .background:not(.down-scroll) .content-wrapper {
+
+.detail-background.down-scroll+.background:not(.down-scroll) .content-wrapper {
   transform: translateY(15vh);
 }
 
-
-.detail-parallax-container{
+.detail-parallax-container {
   -webkit-transform: translateY(0vh);
-    -ms-transform: translateY(0vh);
-    transform: translateY(0vh)
+  -ms-transform: translateY(0vh);
+  transform: translateY(0vh)
 }
 
 .detail-title {
